[project]
name = "multi-agent-system"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "beautifulsoup4>=4.14.3",
    "langchain>=0.2.0",
    "langchain-core>=0.2.0",
    "langchain-groq>=1.1.2",
    "pydantic>=2.0",
    "python-dotenv>=1.2.2",
    "requests>=2.33.1",
    "rich>=15.0.0",
    "streamlit>=1.56.0",
    "tavily-python>=0.7.23",
]
